
[TestPrintWarningBox/render_single_line_message - 1]
[48;2;255;211;0m [0m[38;2;0;0;0;48;2;255;211;0mWARN [0m[48;2;255;211;0m [0m test message

---

[TestPrintWarningBox/render_multi_line_message - 1]
[48;2;255;211;0m [0m[38;2;0;0;0;48;2;255;211;0mWARN [0m[48;2;255;211;0m [0m test message
[48;2;255;211;0m [0m[38;2;0;0;0;48;2;255;211;0m[0m[48;2;255;211;0m [0m[48;2;255;211;0m     [0m second line 

---

[TestPrintInfoBox/render_single_line_message - 1]
[48;2;0;113;206m [0m[38;2;0;0;0;48;2;0;113;206mINFO [0m[48;2;0;113;206m [0m test message

---

[TestPrintInfoBox/render_multi_line_message - 1]
[48;2;0;113;206m [0m[38;2;0;0;0;48;2;0;113;206mINFO [0m[48;2;0;113;206m [0m test message
[48;2;0;113;206m [0m[38;2;0;0;0;48;2;0;113;206m[0m[48;2;0;113;206m [0m[48;2;0;113;206m     [0m second line 

---
